css/style.css
/* ... */
/*tablet*/
@media (min-width: 582px) and (max-width: 1157px) {
  /*header*/
  .section {
    padding: 96px 0;
  }
  .logo {
    flex-grow: 0;
    white-space: nowrap;
    margin-right: 120px;
  }
  .contacts-info {
    max-width: 120px;
    flex-shrink: 0;
  }
  .list-contacts {
    flex-direction: column;
    gap: 10px;
    justify-content: center;
    flex-shrink: 1;
  }
  .contacts-info-a {
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
  }
  .contacts-info-a:hover,
  .contacts-info-a:focus {
    color: var(--dark-light-blue);
  }
  .contacts-info li {
    list-style-type: none;
    flex-shrink: 0;
  }

  /*first section*/
  .banner {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/banner-tablet-1x.jpg');
    max-height: 436px;
    padding: 112px 0;
  }
  .hero-text {
    font-size: 56px;
    line-height: 1.07;
    max-width: 496px;
    margin-bottom: 36px;
  }

  /*second section*/
  .second-section-list {
    gap: 72px 24px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    margin: 0;
  }
  .element-li {
    flex-basis: calc((100% - 26px) / 2);
  }
  .wt-we-do-paragraph {
    line-height: 1.5;
  }

  /*third section*/
  .team-grid {
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    flex-basis: calc((100% - 24px) / 2);
    margin: 0;
  }

  /*forth section*/
  .portfolio-grid {
    gap: 72px 24px;
  }
  .portfolio-grid img {
    max-width: 356px;
  }
  .portfolio-li {
    width: calc((100% - 24px) / 2);
  }

  /*footer*/
  .footer {
    padding: 96px 93px;
    height: auto;
    min-height: 456px;
  }
  .row {
    flex-wrap: wrap;
    gap: 72px 24px;
  }
  .footer-social {
    align-self: flex-start;
  }

  /*modal leave contacts*/
  .page-wrapper {
    top: 20px;
  }
}

@media (min-width: 768px) and (max-width: 1157px) and (min-resolution: 2dppx) {
  .banner {
    display: flex;
    justify-items: center;
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/banner-tablet-2x.jpg');
  }
}

/*desktop*/
@media (min-width: 1158px) {
  /*header*/
  .section {
    padding: 120px 0;
  }
  .logo {
    flex-shrink: 0;
    flex-grow: 0;
    margin-right: 76px;
    padding: 20px 0;
  }
  .contacts-info-a {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    font-style: normal;
    color: var(--lightest-dark-blue);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .contacts-info-a:hover,
  .contacts-info-a:focus {
    color: var(--dark-light-blue);
  }
  .contacts-info li {
    list-style-type: none;
    flex-shrink: 0;
  }
  .list-contacts {
    gap: 42px;
    margin-left: auto;
  }

  /*first section*/
  .banner {
    min-height: 600px;
    max-width: 1440px;
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/banner-desktop-1x.jpg');
    margin: 0 auto;
    padding: 188px 0;
  }
  .hero-text {
    font-size: 56px;
    line-height: 1.07;
    max-width: 496px;
    margin-bottom: 48px;
  }

  /*second section*/
  .second-section-list {
    flex-direction: row;
    gap: 24px;
  }
  .element-li {
    width: calc((100% - 72px) / 4);
  }
  .icons-what-we-do {
    display: flex;
    background-color: var(--lightest-blue);
    border: 1px solid var(--middle-grey);
    border-radius: 4px;
    margin-bottom: 8px;
    padding: 24px 100px;
    justify-content: center;
    align-items: center;
    max-width: 100%;
    height: 112px;
  }
  .title-third {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
  }
  .wt-we-do-paragraph {
    font-weight: 400;
  }
  .team-member-img {
    width: 264px;
    height: 260px;
    object-fit: none;
  }

  /*forth section*/
  .portfolio-grid {
    gap: 48px 24px;
  }
  .portfolio-li {
    width: calc((100% - 48px) / 3);
  }

  /*footer*/
  .footer {
    padding: 100px 0;
    max-height: 312px;
  }
  .row {
    align-items: baseline;
  }
  .subscribe {
    margin-left: 80px;
  }
  .text-footer {
    align-self: flex-start;
    margin-right: 120px;
  }
  .footer-social {
    gap: 0;
  }

  /*modal leave contacts*/
  .page-wrapper {
    top: 4px;
  }
}

@media (min-width: 1158px) and (min-resolution: 2dppx) {
  .banner {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/banner-desktop-2x.jpg');
  }
}

